Automatically backed up by Learn

--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -1,6 +1,6 @@
 <h2>Create New Figure</h2>
 
-<form action="/owners" method="POST">
+<form action="/figures" method="POST">
   <label>Owner Name:</label>
   <br>
   <input type="text" name="owner[name]">
