--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -1,12 +1,12 @@
 <h2>Create New Figure</h2>
 
 <form action="/figures" method="POST">
-  <label>Owner Name:</label>
+  <label>Figure Name:</label>
   <br>
-  <input type="text" name="owner[name]">
+  <input type="text" name="figure[name]">
 
   <br>
-  <p>Select an existing pet or create a new one below.</p>
+  <p>Select an existing landmark or create a new one below.</p>
 
 
   <h3>Existing Pets</h3>
