--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -9,7 +9,7 @@
   <p>Select an existing landmark or create a new one below.</p>
 
 
-  <h3>Existing Pets</h3>
+  <h3>Existing Landmarks</h3>
   <% @pets.each do |pet| %>
     <input type="checkbox" name="owner[pet_ids][]" id="<%= pet.id %>" value="<%= pet.id %>"><%= pet.name %></input><br>
   <% end %>
