--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -10,7 +10,7 @@
 
 
   <h3>Existing Landmarks</h3>
-  <% @pets.each do |pet| %>
+  <% @landmarks.each do |lardmark| %>
     <input type="checkbox" name="owner[pet_ids][]" id="<%= pet.id %>" value="<%= pet.id %>"><%= pet.name %></input><br>
   <% end %>
   <br>
