--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -11,7 +11,7 @@
 
   <h3>Existing Landmarks</h3>
   <% @landmarks.each do |lardmark| %>
-    <input type="checkbox" name="owner[pet_ids][]" id="<%= pet.id %>" value="<%= pet.id %>"><%= pet.name %></input><br>
+    <input type="checkbox" name="figure[title_ids][]" id="<%= landmark.id %>" value="<%= landmark.id %>"><%= landmark.name %></input><br>
   <% end %>
   <br>
 
