--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -15,11 +15,11 @@
   <% end %>
   <br>
 
-  <h3>New Pet</h3>
-  <label>Pet Name: </label>
+  <h3>New Landmark</h3>
+  <label>Landmark Name: </label>
   <br>
-  <input type="text" name="pet[name]" id="pet_name"></input>
+  <input type="text" name="landmark[name]" id="landmark_name"></input>
   <br><br>
 
-  <input type="submit" value="Create Owner">
+  <input type="submit" value="Create Figure">
 </form>
