--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -1,25 +1,27 @@
-<h2>Create New Figure</h2>
-
 <form action="/figures" method="POST">
-  <label>Figure Name:</label>
-  <br>
-  <input type="text" name="figure[name]">
+  <lable>Name</label>
+    <input type="text" id="figure_name" name="figure[name]"><br></br>
+    
+  <label><h4>Titles</h4></label>
+    <% Title.all.each do |title| %>
+      <label><%= title.name %></label>
+      <input type="checkbox" id="title_<%=title.id%>" name="figure[title_ids][]" value="<%= title.id %>"><br>
 
-  <br>
-  <p>Select an existing landmark or create a new one below.</p>
+    <% end %>
+ <label><h4>Create New Title:</h4></label>
+  <input type="text" id="new_title" name="title[name]">
+  
 
+  <label><h4>Landmarks</h4></label>
+    <% Landmark.all.each do |landmark| %>
+      <label><%= landmark.name %></label>
+      <input type="checkbox" id="landmark_<%=landmark.id%>" name="figure[landmark_ids][]" value="<%= landmark.id %>"><br>
 
-  <h3>Existing Landmarks</h3>
-  <% @landmarks.each do |lardmark| %>
-    <input type="checkbox" name="figure[title_ids][]" id="<%= landmark.id %>" value="<%= landmark.id %>"><%= landmark.name %></input><br>
-  <% end %>
-  <br>
-
-  <h3>New Landmark</h3>
-  <label>Landmark Name: </label>
-  <br>
-  <input type="text" name="landmark[name]" id="landmark_name"></input>
-  <br><br>
-
-  <input type="submit" value="Create Figure">
+    <% end %>
+ <label><h4>Create New Landmark:</h4></label>
+ <label>Name:</label>
+  <input type="text" id="new_landmark" name="landmark[name]">
+  <label>Year:</label>
+  <input type="text" name="landmark[year_completed]">
+  <input type="submit" value="Create New Figure">
 </form>
